# gh-vault

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
assets/: AGENTS.md  README.md  build_brand_assets.py
docs/: AGENTS.md  RELEASING.md
src/gh_vault/: AGENTS.md  __init__.py  actions.py  cli.py  envfiles.py  github.py  store.py
src/github_token_safe/: AGENTS.md  __init__.py  cli.py  store.py
tests/: AGENTS.md  test_cli.py  test_store.py  test_vault_features.py
