[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forgegod-gh-vault"
dynamic = ["version"]
description = "Safely store GitHub credentials and project environment archives"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "hephaistos", email = "hephaistos@grewety.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Security",
  "Typing :: Typed",
]

[project.scripts]
forgegod-gh-vault = "gh_vault.cli:main"

[project.urls]
Homepage = "https://github.com/forgegod/gh-vault"
Repository = "https://github.com/forgegod/gh-vault"
Issues = "https://github.com/forgegod/gh-vault/issues"
Changelog = "https://github.com/forgegod/gh-vault/releases"

[tool.setuptools.dynamic]
version = { attr = "gh_vault.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
